--- a/app/src/main/res/layout/item_gift.xml
+++ b/app/src/main/res/layout/item_gift.xml
@@ -27,7 +27,8 @@
         android:id="@+id/iv_gift_image"
         android:layout_width="215dp"
         android:layout_height="247dp"
-        android:layout_gravity="center_vertical"
+        android:scaleType="fitCenter"
+        android:layout_gravity="center_vertical|center_horizontal"
         android:textColor="@color/black"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,12 +47,13 @@
         android:text="유효기간"
         android:textAlignment="center"
         android:textColor="@color/black"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.915" />
+        app:layout_constraintVertical_bias="0.918" />
 
     <TextView
         android:id="@+id/tv_useyn"
@@ -60,6 +62,7 @@
         android:text="사용여부"
         android:textAlignment="center"
         android:textColor="@color/black"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -75,6 +78,7 @@
         android:text="BRAND"
         android:textAlignment="center"
         android:textColor="@color/black"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.434"
