--- a/app/src/main/res/layout/item_gift.xml
+++ b/app/src/main/res/layout/item_gift.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,7 +8,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
 
-    android:layout_marginHorizontal="20dp"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginVertical="5dp"
     android:layout_gravity="center"
 
     >
@@ -52,10 +53,19 @@
 
 <!--    https://recipes4dev.tistory.com/105-->
 
+
+
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="150dp"-->
+
+<!--    android:layout_marginTop="32dp"-->
     <ImageView
         android:id="@+id/iv_gift_image"
         android:layout_width="match_parent"
         android:layout_height="150dp"
+        android:layout_marginStart="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:scaleType="fitXY"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
@@ -107,4 +117,4 @@
         app:layout_constraintVertical_bias="0.0" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
